--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <title>Counter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
-    <h1 class="text-center mx-auto my-5">Counter</h1>
-    <p class="text-center my-3">{{session['count']}} times</p>
+<body class="bg-dark text-light">
+    <h1 class="text-center mx-auto mt-5">Counter</h1>
+    <p class="text-center mt-3 fs-3 ">{{session['count']}} time(s)</p>
 </body>
 </html>
